[package]
name = "backend-dogfight-rust-25"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.38", features = ["serde"] }
deadpool-redis = { version = "0.22.0", features = ["rt_tokio_1"] }
env_logger = "0.11.8"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
log = "0.4.27"
