[package]
name = "backend-dogfight-rust-25"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.38", features = ["serde"] }
deadpool-redis = { version = "0.22.0", features = ["rt_tokio_1"] }
env_logger = "0.11.8"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4.27"
async-channel = "2.5.0"
